--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "dotenv": "^7.0.0",
+    "firebase-admin": "^7.2.0",
     "hapi": "^18.1.0",
     "hapi-pino": "^5.4.1",
     "inert": "^5.1.2",
@@ -14,7 +16,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-nes": "^1.0.6",
-    "react-scripts": "2.1.3",
+    "react-router": "^4.3.1",
+    "react-scripts": "^2.1.8",
     "react-websocket": "^2.0.1"
   },
   "devDependencies": {},
